--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,8 @@
 body {
     background-color: aliceblue;
     color: midnightblue;
+    text-align: center;
+}
+footer {
+    text-align: center;
 }
