--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,69 @@
 body {
-    background-color: aliceblue;
-    color: midnightblue;
-    text-align: center;
+  background-color: snow;
+  color: midnightblue;
+  font-family: "DM Serif Text", serif;
+  font-weight: 400;
 }
+
+h1 {
+  text-align: center;
+  font-size: 36px;
+}
+
+h2 {
+  margin: 0 0 8px;
+  font-size: 28px;
+}
+
+select {
+  background-color: snow;
+  color: midnightblue;
+  display: block;
+  width: 100%;
+  font-family: "DM Serif Text", serif;
+  font-size: 20px;
+  border-radius: 4px;
+  padding: 12px;
+}
+
+.container {
+  max-width: 600px;
+  margin: 60px auto;
+  background: aliceblue;
+  padding: 30px;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 8px 32px 0px;
+  border-radius: 10px;
+}
+
+.city {
+  display: flex;
+  margin: 12px 0;
+  justify-content: space-between;
+  padding: 32px 0;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+}
+
+.city:last-child {
+  border: none;
+}
+
+.date {
+  opacity: 0.7;
+}
+
+.time {
+  font-size: 48px;
+  font-weight: bold;
+}
+
+.time small {
+  font-size: 24px;
+  vertical-align: middle;
+  line-height: 48px;
+}
+
 footer {
-    text-align: center;
+  text-align: center;
+  font-size: 20px;
+  color: midnightblue;
 }
